# ducat

./: .commitlintrc.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  commitlint.yml  release.yml
helm/ducat/: Chart.yaml  values.yaml
helm/ducat/dashboards/: ducat.json
helm/ducat/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  cronjob.yaml  dashboard-configmap.yaml  deployment.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
src/ducat/: __init__.py  cli.py  config.py  focus.py  metrics.py
src/ducat/adapters/: __init__.py  aws.py  base.py  cloudflare.py  github.py
src/ducat/sinks/: __init__.py  remote_write.py  serve.py
tests/: test_aws.py  test_cloudflare.py  test_github.py  test_metrics.py
