[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ducat"
version = "0.3.0"
description = "One cost view across every provider: cloud, SaaS, and AI spend, normalized on FOCUS and exported to Prometheus/Grafana."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Asutosh Panda" }]
keywords = ["finops", "cost", "prometheus", "grafana", "focus", "billing", "cloud", "saas", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: System Administrators",
  "Topic :: System :: Monitoring",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "httpx>=0.27",
  "PyYAML>=6.0",
  "prometheus-client>=0.20",
]

[project.optional-dependencies]
push = ["prometheus-remote-writer>=0.1.5"]
aws = ["boto3>=1.34"]
gcp = ["google-cloud-bigquery>=3.0"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
ducat = "ducat.cli:main"

[project.urls]
Homepage = "https://github.com/75asu/ducat"
Source = "https://github.com/75asu/ducat"

[tool.hatch.build.targets.wheel]
packages = ["src/ducat"]

[tool.ruff]
line-length = 100
